2001-06-17  Per Bothner  <per@bothner.com>

	* ELisp.java:  Change to extend Lisp2.
	Adjust for Symbol and ObArray->SymbolTable moved.
	(<init>):  Load new gnu.commonlisp.lisp.PrimOps instead.
	* Symbol.java:  Moved to gnu.commonlisp.lang.
	* ObArray.java:  Moved to gnu.commonlisp.lang.SymbolTable.
	* SymbolOps.scm, StringOps.scm, ArrayOps.scm, ListOps.scm:  Removed,
	with code moved to gnu.commonlisp.lang.PrimOps.
	* MiscOps.scm (make-local-variable, emacs:read):  Moved here
	* Makefile.am:  Updated.
	* defcustom.java:  Updated to handle symbol is Binding.
	
2001-06-03  Per Bothner  <per@bothner.com>

	* ELispReader.java (static):  Remove ']' from elispReadTable.
	Needed ot make sure ']' is not treated as a constituent.

	* Print.java:  New class, extends DisplayFormat.
	* Makefile.am (java_WITH_SWING):  Add Print.java.
	* ELisp.java (writeFormat, displayFormat):  New fields.
	(getFormat): New method.
	(<init>):  Define procedures prin1 and princ.
	(print):  Removed method.

2001-05-16  Per Bothner  <per@bothner.com>

	* ELisp.java:  Update to use LangPrimType.

	* ELisp.java (nilExpr):  Use CommonLisp.nilExpr.

2001-05-01  Per Bothner  <per@bothner.com>

	Steps to making jemacs depends on commonlisp rather than vice versa.
	* UnwindProtect.java:  Moved to ../../../gnu/commonlisp/lang.
	* defun.java:  Moved to ../../../gnu/commonlisp/lang.
	* defvar.java:  Moved to ../../../gnu/commonlisp/lang.
	* setq.java:  Moved to ../../../gnu/commonlisp/lang.
	* Makefile.am:  Update accordingly.
	* ELisp.java:  Likewise.

2001-04-24  Per Bothner  <per@bothner.com>

	* ELispReader.java:  Extend CLispreader rather than LispReader.
	(readObject):  Fix thinko - create ELispReader rather than ScmRead.
	(isDelimiter, readAtom0, readAtom, readInteger):  Remove - not used.
	(makeNil, makePair, setCdr):  Remove - use inherited version.

2001-04-22  Per Bothner  <per@bothner.com>

	* ELispReader.java:  Re-write to use new readtable-based LispReader.
